Fix flickering between edge lines and arrows

--- a/src/views.css
+++ b/src/views.css
@@ -36,16 +36,10 @@
     font-size: 5pt;
 }
 
-.sprotty-node .node-label rect {
-    fill: var(--color-primary);
-    stroke: var(--color-foreground);
-    stroke-width: 0.5;
-}
-
+.sprotty-node .node-label rect,
 .sprotty-node .node-label .label-delete circle {
     fill: var(--color-primary);
     stroke: var(--color-foreground);
-
     stroke-width: 0.5;
 }
 
